# Movie-News-1

./: .gitignore  CLAUDE.md  README.md  briefing.bat  index.html  pyproject.toml  robots.txt  run.bat  view.bat
.github/workflows/: daily.yml  notify-briefing.yml
config/: keywords.yaml  lotte_priority_titles.yaml  sources.yaml
crawler/: ai_briefing.py  boxoffice.py  boxofficemojo.py  briefing_models.py  community.py  dedupe.py  kobis.py  lotte_priority.py  main.py  market_trends.py  models.py  policies.py  relevance.py  scorer.py  tmdb.py  translator.py
crawler/sources/: base.py  cine21.py  deadline.py  extmovie.py  indiewire.py  maxmovie.py  naver.py  rollingstone.py  thr.py  variety.py
data/: ai_briefing.json  articles.json  community.json  distributor_cache.json  market.json  market_trends.json  overseas_weekend.json  policies.json  reservation.json
docs/superpowers/mockups/: dashboard-layout-options.html
docs/superpowers/plans/: 2026-05-18-movie-cultural-briefing-dashboard.md  2026-05-20-core-curation-sections.md  2026-05-20-market-trends-briefing.md  2026-05-21-timestamped-briefing-archive.md
docs/superpowers/specs/: 2026-05-18-movie-cultural-briefing-dashboard-design.md
scripts/: build_mail_body.py  inspect_cine21.py  inspect_extmovie.py  inspect_maxmovie.py  send_mail.py
site/: build.py  style.css  template.html.j2
tests/: test_boxofficemojo.py  test_briefing_models.py  test_cine21.py  test_community.py  test_kobis.py  test_market_trends.py  test_pipeline_artifacts.py  test_policies.py  test_scorer_market.py  test_site_build.py  test_tmdb.py
(+120 files in other folders)
